--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "一个自动将剪切板的图片上传到七牛云并生成链接的工具，便于写MarkDown",
   "main": "index.js",
   "bin": {
-    "qiniu-upload": "./bin/index.js"
+    "qiniu-upload": "./index.js"
   },
   "scripts": {
     "start": "electron index.js"
